# moreymachine

./: .gitignore  CODEX.md  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: ARCHITECTURE.md  DOMAIN_MODEL.md  GM_DECISION_MODEL.md  OLLAMA_SUMMARIZATION.md  PIPELINE_DAG.md  PRODUCT_SPEC.md  REASONING_SYSTEM.md  UI_UX_SPEC.md
scripts/: analyze_roster_gaps.py  audit_data_lineage.py  build_acquisition_feasibility.py  build_best_by_need.py  build_candidate_scenarios.py  build_candidate_universe.py  build_compatibility_matrix.py  build_contender_blueprints.py  build_contracts.py  build_explanations_v2.py  build_fit_breakdowns.py  build_gap_model.py  build_help_impact.py  build_narratives.py  build_player_archetypes.py  build_player_categorization.py  build_player_profiles.py  build_player_roles.py  build_player_skill_profiles.py  build_playoff_tiers.py  build_quality_tiers.py  build_roster_archetypes.py  build_roster_world.py  build_salary_cards.py  build_team_fingerprints.py  check_project.py  export_scouting_reports.py  fetch_candidates.py  fetch_nba_data.py  rank_candidates.py  rank_candidates_v2.py  refresh_current_data.py  refresh_transactions.py  run_app.py  run_backtest.py  run_team_pipeline.py  simulate_roster_slots.py  train_contender_model.py  train_outcome_tier_model.py  validate_all_schemas.py  (+5 more)
tests/: industry_v2_helpers.py  test_backtest.py  test_best_by_need.py  test_board_validation.py  test_candidate_scoring.py  test_candidate_universe.py  test_compatibility_matrix.py  test_contender_model.py  test_fit_model.py  (+28 more)
(+1744 files in other folders)
